--- a/screenStyle_php.css
+++ b/screenStyle_php.css
@@ -7,11 +7,15 @@ html, body{
     margin: 1px;
     padding: 0;
     background-color: #ffffff;
+    
+    font-size: calc(5px + 1vw);
+
+}
+
+.main{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    font-size: calc(5px + 1vw);
-
 }
 
 .article_big{
