--- a/screenStyle_php.css
+++ b/screenStyle_php.css
@@ -215,6 +215,7 @@ html, body{
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 
 }
 .article_news_last_response{
